[gd_scene load_steps=2 format=3 uid="uid://c0x1oiv7oixbx"]

[ext_resource type="Script" uid="uid://cetmo38roqnjg" path="res://scenes/lobby/room_button.gd" id="1_c386o"]

[node name="RoomButton" type="Button"]
offset_right = 604.0
offset_bottom = 31.0
disabled = true
text = " "
script = ExtResource("1_c386o")
room_name = "Unknown"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="NameLabel" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Unknown's Room"
horizontal_alignment = 2

[node name="CountLabel" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0/4"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Closed"

[connection signal="pressed" from="." to="." method="_on_pressed"]
